--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -20,10 +22,10 @@
   "bugs": {
     "url": "https://github.com/robinhuy/fake-rest-api-nodejs/issues"
   },
-  "homepage": "https://github.com/robinhuy/fake-rest-api-nodejs#readme",
   "dependencies": {
     "express-graphql": "^0.12.0",
     "formidable": "^2.0.1",
+    "gh-pages": "^4.0.0",
     "graphql": "^16.6.0",
     "json-server": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
@@ -32,5 +34,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
-  }
+  },
+  "homepage": "http://tminhbao.github.io/registration-server"
 }
